# analyticsvidhya-course-recommender

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: exception.py  logger.py
src/constants/: __init__.py
src/scrap/: helper.py  scrap.py  scrap_temp.py
src/search/: helper.py  search.py
src/utils/: utils.py
